# maxconn

./: .gitignore  Makefile  README.md  client.c  server.c
src/: CMakeLists.txt  README.txt
src/client/: CMakeLists.txt  client.c  client01.c  client02.c  client03.c  client04.c  client05.c  client06.c  launcher.c  launcher01.c  launcher02.c  launcher03.c
src/lib/: CMakeLists.txt  error.c  generators.c  logger.c  readline.c  sigchldwaitpid.c  signal.c  str_cli.c  str_echo.c  unp.h  wraplib.c  wrapsock.c  wrapstdio.c  wrapunix.c  writen.c
src/server/: CMakeLists.txt  server.c  server2.c
