cmake_minimum_required(VERSION 3.4.3)
project(maxconn)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
  set(CMAKE_C_FLAGS "-Wall -std=gnu11")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
  set(CMAKE_C_FLAGS "-Wall -std=gnu11")
endif()
add_subdirectory(lib)
add_subdirectory(server)
add_subdirectory(client)
