cmake_minimum_required(VERSION 3.4.3)
project(maxconn)
add_executable(client01 client01.c)
add_executable(client02 client02.c)
add_executable(client03 client03.c)
target_include_directories(client01 PRIVATE ../lib)
target_include_directories(client02 PRIVATE ../lib)
target_include_directories(client03 PRIVATE ../lib)
target_link_libraries(client01 error wrapsock wraplib str_cli)
target_link_libraries(client02 error wrapsock wraplib str_cli)
target_link_libraries(client03 error wrapsock wraplib str_cli)
add_executable(launcher launcher.c)
