cmake_minimum_required(VERSION 3.4.3)
project(maxconn)
add_executable(client01 client01.c)
add_executable(client02 client02.c)
add_executable(client03 client03.c)
add_executable(client04 client04.c)
add_executable(client05 client05.c)
add_executable(client06 client06.c)
target_include_directories(client01 PRIVATE ../lib)
target_include_directories(client02 PRIVATE ../lib)
target_include_directories(client03 PRIVATE ../lib)
target_include_directories(client04 PRIVATE ../lib)
target_include_directories(client05 PRIVATE ../lib)
target_include_directories(client06 PRIVATE ../lib)
target_link_libraries(client01 error wrapsock wraplib str_cli)
target_link_libraries(client02 error wrapsock wraplib str_cli)
target_link_libraries(client03 error wrapsock wraplib str_cli)
target_link_libraries(client04 error wrapsock wraplib generators)
target_link_libraries(client05 error wrapsock wraplib wrapstdio writen readline)
target_link_libraries(client06 error wrapsock wraplib wrapstdio writen readline logger)
add_executable(launcher01 launcher01.c)
target_include_directories(launcher01 PRIVATE ../lib)
target_link_libraries(launcher01 error signal sigchldwaitpid)
add_executable(launcher02 launcher02.c)
target_include_directories(launcher02 PRIVATE ../lib)
target_link_libraries(launcher02 error)
add_executable(launcher03 launcher03.c)
target_include_directories(launcher03 PRIVATE ../lib)
target_link_libraries(launcher03 error)
