cmake_minimum_required(VERSION 3.4.3)
project(maxconn)
add_library(error STATIC error.c)
add_library(wrapsock STATIC wrapsock.c)
add_library(wrapunix STATIC wrapunix.c)
add_library(str_echo STATIC str_echo.c)
add_library(writen STATIC writen.c)
add_library(wraplib STATIC wraplib.c)
add_library(wrapstdio STATIC wrapstdio.c)
add_library(readline STATIC readline.c)
add_library(str_cli STATIC str_cli.c)
target_link_libraries(wrapsock error)
target_link_libraries(wrapunix error)
target_link_libraries(writen error)
target_link_libraries(str_echo writen error)
target_link_libraries(wraplib error)
target_link_libraries(wrapstdio error)
target_link_libraries(str_cli wrapstdio writen readline error)
